[project]
name = "fastapi-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt<4.2",
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.138.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
]
